aws_tutorial/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app-service
spec:
  type: NodePort
  selector:
    app: frontend-app 
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30008
